--- a/Lab6/app/src/main/res/layout/recycler_item.xml
+++ b/Lab6/app/src/main/res/layout/recycler_item.xml
@@ -2,33 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:id="@+id/linearLayout"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/profilePic"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:layout_weight="1"
-        android:padding="10sp"
+        android:padding="5dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/memberName"
-        android:layout_width="wrap_content"
+        android:id="@+id/memberID"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="kxnkjfsdz" />
+        tools:text="StudentID" />
 
     <TextView
-        android:id="@+id/memberID"
-        android:layout_width="wrap_content"
+        android:id="@+id/memberName"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:layout_weight="1"
         android:gravity="center"
-        tools:text="ekfnuewhfiu" />
+        android:text="StudentName" />
 </LinearLayout>
