--- a/Lab6/app/src/main/res/layout/activity_main.xml
+++ b/Lab6/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,13 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <ImageButton
+        android:id="@+id/addButton"
 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
