--- a/Lab6/app/src/main/res/layout/view1_layout.xml
+++ b/Lab6/app/src/main/res/layout/view1_layout.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|left"
             android:text="StudentName" />
 
         <TextView
@@ -34,7 +34,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|left"
             android:text="student ID" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
