--- a/Lab6/app/src/main/res/layout/view1_layout.xml
+++ b/Lab6/app/src/main/res/layout/view1_layout.xml
@@ -10,14 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/profilePic"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            app:srcCompat="@android:drawable/btn_star_big_on" />
 
         <TextView
             android:id="@+id/memberName"
@@ -25,7 +17,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:gravity="center|left"
+            android:gravity="center|center_horizontal"
             android:text="StudentName" />
 
         <TextView
@@ -34,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:gravity="center|left"
+            android:gravity="center|center_horizontal"
             android:text="student ID" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
