--- a/Lab6/app/src/main/res/layout/view2_layout.xml
+++ b/Lab6/app/src/main/res/layout/view2_layout.xml
@@ -28,11 +28,12 @@
                     android:layout_weight="1"
                     android:text="TextView" />
 
-                <ImageView
-                    android:id="@+id/imageView"
+                <Button
+                    android:id="@+id/editButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="18dp"
+                    android:layout_height="12dp"
                     android:layout_gravity="end"
+                    android:clickable="true"
                     app:srcCompat="@android:drawable/ic_menu_edit" />
             </LinearLayout>
 
