--- a/Lab6/app/src/main/res/layout/activity_add_update_data.xml
+++ b/Lab6/app/src/main/res/layout/activity_add_update_data.xml
@@ -95,13 +95,13 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            style="@style/Widget.MaterialComponents.MaterialCalendar.HeaderToggleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:srcCompat="@android:drawable/ic_menu_add" />
+<!--        <ImageButton-->
+<!--            android:id="@+id/imageButton"-->
+<!--            style="@style/Widget.MaterialComponents.MaterialCalendar.HeaderToggleButton"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="10dp"-->
+<!--            app:srcCompat="@android:drawable/ic_menu_add" />-->
 
     </LinearLayout>
 
