made some changes in dataAdapter

--- a/Lab6/app/src/main/res/layout/view2_layout.xml
+++ b/Lab6/app/src/main/res/layout/view2_layout.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <LinearLayout
+            <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -25,17 +25,16 @@
                     android:id="@+id/fName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="TextView" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/editButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="12dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:clickable="true"
-                    app:srcCompat="@android:drawable/ic_menu_edit" />
-            </LinearLayout>
+                    android:background="@android:drawable/ic_menu_edit"
+                    android:clickable="true" />
+            </GridLayout>
 
             <TextView
                 android:id="@+id/lName"
