--- a/Lab6/app/src/main/res/layout/add_data_layout.xml
+++ b/Lab6/app/src/main/res/layout/add_data_layout.xml
@@ -94,7 +94,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/possibleEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
